5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1832_3180.log
== TEST (2019-06-13 18:16:05) 
-- CODE:
from numpy *
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
   for 
-- ERROR:
File "XXXX", line 1
    from numpy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:17:23) 
-- CODE:
from numpy *
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
  while for (size < 1)
-- ERROR:
File "XXXX", line 1
    from numpy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:20:26) 
-- CODE:
from numpy *
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
  while for (size < 1)
	print (zeros(n, dtype=int))
-- ERROR:
File "XXXX", line 1
    from numpy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:21:26) 
-- CODE:
from numpy *
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
  while for (size < 1)
	print (zeros(n, dtype=int))
-- EXECUTION TIME:
0.720708
-- ERROR:
  File "/home/codebench/codes/1832/3180/main.py", line 1
    from numpy *
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:21:44) 
-- CODE:
from numpy *
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
  while for (size < 1)
	print (zeros(n, dtype=int))
-- ERROR:
File "XXXX", line 1
    from numpy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:21:48) 
-- CODE:
from numpy *
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
  while for (size < 1)
	print (zeros(n, dtype=int))
-- EXECUTION TIME:
0.683847
-- ERROR:
  File "/home/codebench/codes/1832/3180/main.py", line 1
    from numpy *
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:23:17) 
-- CODE:
from numpy *
while (size, 1)
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
	print (zeros(n, dtype=int))
-- ERROR:
File "XXXX", line 1
    from numpy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:23) 
-- CODE:
from numpy import *
while (size, 1)
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
	print (zeros(n, dtype=int))
-- ERROR:
File "XXXX", line 2
    while (size, 1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:33) 
-- CODE:
from numpy import *
while (size, 1)
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
	print (zeros(n, dtype=int))
-- ERROR:
File "XXXX", line 2
    while (size, 1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:16) 
-- CODE:
from numpy import *
arrya(eval(input("")))
a=("dois pacientes foram infectados com o sorotipo 2 :")
b=("um paciente teve o sorotipo 4 :")
c=("um paciente teve o sorotipo 3 :")
d=("dois pacientes tiveram o virus com sorotipo 1 :")
	print (zeros(n, dtype=int))
-- ERROR:
File "XXXX", line 7
    print (zeros(n, dtype=int))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
